--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,19 @@
 </head>
 <body class="text-neutral-dark-green py-7 bg-gray-200">
         <nav class="bg-neutral-white flex place-content-between align-middle px-8 py-4 mb-16 md:pr-32 sticky top-0 left-0 z-10">
-            <p class="text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="#">SO</a></p>
-             <ul class="hidden   text-primary-dark-green font-semibold text-xl md:flex md:gap-x-12">
-                 <li><a class="nav-link"  href="#ABOUT ME">ABOUT ME</a> </li>
-                 <li><a class="nav-link" href="#MY SKILLS">MY SKILLS</a></li>
-                 <li><a class="nav-link" href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a></li>
-                 <li><a class="nav-link" href="#GET INTOUCH WITH ME">GET INTOUCH WITH ME</a></li>
+            <p class="text-2xl md:text-3xl font-semibold mb-4 text-primary-dark-green"><a href="">SO</a></p>
+             <ul class="hidden   text-primary-dark-green font-semibold text-xl md:flex md:gap-x-12 ">
+                 <li class="nav-link"><a href="#ABOUT ME">ABOUT ME</a> </li>
+                 <li class="nav-link"><a href="#MY SKILLS">MY SKILLS</a></li>
+                 <li class="nav-link"><a href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a></li>
+                 <li class="nav-link"><a href="#GET INTOUCH WITH ME">GET INTOUCH WITH ME</a></li>
              </ul>
              <button id="burger-menu" class="md:hidden">
                  <svg class="" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="2em" height="2em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"/></svg>
              </button>
          </nav> 
     <section class="mx-10 rounded-xl shadow-2xl md:mx-32">
-        <h1 id="ABOUT ME"><a href="#">ABOUT ME</a></h1>
+        <h1 id="ABOUT ME" class="heading"><a href="#ABOUT ME">ABOUT ME</a></h1>
            <div class="mb-5 md:text-left  md:mx-10">
             <p class="mb-2">HELLO THERE, I`M  <span class="font-semibold">SAMWEL OMWENGA</span></p>
             <p class="font-semibold text-lg">SOFTWARE DEVELOPER</p>
@@ -33,7 +33,7 @@
         Sint rerum necessitatibus molestias laborum, voluptatem, dolores sed maxime error in consequuntur atque natus? Nobis fugit voluptatem voluptate, porro accusantium nulla praesentium accusamus vero voluptatibus perferendis, ducimus labore, deserunt sint.</p>
     </section>
     <section class="md:mx-32">
-        <h2 id="MY SKILLS"><a href="#">MY SKILLS</a></h2>
+        <h2 id="MY SKILLS" class="heading"><a href="#MY SKILLS">MY SKILLS</a></h2>
        <div class="grid grid-cols-3 gap-3 p-6 place-items-center content-center">
            <div class="skills-svg"> 
             <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="5rem" height="5rem" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 361"><path fill="#E44D26" d="m255.555 70.766l-23.241 260.36l-104.47 28.962l-104.182-28.922L.445 70.766h255.11Z"/><path fill="#F16529" d="m128 337.95l84.417-23.403l19.86-222.49H128V337.95Z"/><path fill="#EBEBEB" d="M82.82 155.932H128v-31.937H47.917l.764 8.568l7.85 88.01H128v-31.937H85.739l-2.919-32.704Zm7.198 80.61h-32.06l4.474 50.146l65.421 18.16l.147-.04V271.58l-.14.037l-35.568-9.604l-2.274-25.471Z"/><path d="M24.18 0h16.23v16.035h14.847V0h16.231v48.558h-16.23v-16.26H40.411v16.26h-16.23V0Zm68.65 16.103H78.544V0h44.814v16.103h-14.295v32.455h-16.23V16.103h-.001ZM130.47 0h16.923l10.41 17.062L168.203 0h16.93v48.558h-16.164V24.49l-11.166 17.265h-.28L146.35 24.49v24.068h-15.88V0Zm62.74 0h16.235v32.508h22.824v16.05h-39.06V0Z"/><path fill="#FFF" d="M127.89 220.573h39.327l-3.708 41.42l-35.62 9.614v33.226l65.473-18.145l.48-5.396l7.506-84.08l.779-8.576H127.89v31.937Zm0-64.719v.078h77.143l.64-7.178l1.456-16.191l.763-8.568H127.89v31.86Z"/></svg>
@@ -52,45 +52,58 @@
        </div>
     </section>
     <section class="md:mx-32">
-        <h3 id="MY RECENT PROJECTS"><a href="#">MY RECENT PROJECTS</a><h3>
+        <h3 id="MY RECENT PROJECTS" class="heading" ><a href="#MY RECENT PROJECTS">MY RECENT PROJECTS</a><h3>
        <div class="grid place-items-center px-16 md:grid-cols-3 md:gap-6 md:mx-auto">
         <div class="project-card">
-            <img src="../assests\clip board-desktop-preview.jpg" alt="" loading="lazy">
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda in soluta nesciunt fuga aperiam nihil, alias minima asperiores minus, nostrum ea eaque. Laboriosam, quae itaque iste sapiente magni atque!
-            </p> -->
+            <img src="../assests\clip board-desktop-preview.jpg" alt="clip board-desktop-preview" loading="lazy">
+            <p class="project-heading">CLIP BOARD LANDING PAGE </p>
+            <a class="live-preview-link" href="">Live Preview</a>
+            <a class="github-link" href="">Git hub repo</a>
         </div>
         <div class="project-card">
-        <a href=""><img src="../assests\testimonial-grid-desktop-preview.jpg" alt=""loading="lazy"></a>
-            <p></p>
+        <a href=""><img src="../assests\testimonial-grid-desktop-preview.jpg" alt="testimonial-grid-desktop-preview"loading="lazy"></a>
+            <p class="project-heading">TESTIMONIAL GRID SECTION</p>
+            <a class="live-preview-link" href="">Live Preview</a>
+            <a  class="github-link" href="">Git hub repo</a>
         </div>
 
         <div class="project-card" >
-            <a href=""><img src="../assests\flyo-landing-page-desktop-preview.jpg" alt=""loading="lazy"></a> 
-            <p></p>
+            <a href=""><img src="../assests\flyo-landing-page-desktop-preview.jpg" alt="flyo-landing-page-desktop-preview"loading="lazy"></a> 
+            <p class="project-heading">FLYO LANDING PAGE</p>
+            <a class="live-preview-link" href="">Live Preview</a>
+            <a  class="github-link" href="">Git hub repo</a>
         </div>
 
         <div class="project-card">
-            <a href=""><img src="../assests\stats-preview-card-desktop-preview.jpg" alt=""loading="lazy"></a>
-            <p></p>
+            <a href=""><img src="../assests\stats-preview-card-desktop-preview.jpg" alt="stats-preview-card-desktop-preview"loading="lazy"></a>
+            <p class="project-heading">STATS PREVIEW CARD</p>
+            <a class="live-preview-link" href="">Live Preview</a>
+            <a  class="github-link" href="">Git hub repo</a>
         </div>
 
         <div class="project-card" >
-            <a href=""><img src="../assests\nft-preview-card-desktop-preview.jpg" alt=""loading="lazy"></a>
-            <p></p>
+            <a href=""><img src="../assests\nft-preview-card-desktop-preview.jpg" alt="nft-preview-card-desktop-preview"loading="lazy"></a>
+            <p class="project-heading">NFT PREVIEW CARD</p>
+            <a class="live-preview-link" href="">Live Preview</a>
+            <a  class="github-link" href="">Git hub repo</a>
         </div>
 
         <div class="project-card">
-            <a href=""><img src="../assests\four-card-feature-section-desktop-preview.jpg" alt=""loading="lazy"></a>
-            <p></p>
+            <a href=""><img src="../assests\four-card-feature-section-desktop-preview.jpg" alt="four-card-feature-section-desktop-preview"loading="lazy"></a>
+            <p class="project-heading">FOUR CARD FEATURE SECTION</p>
+            <a class="live-preview-link" href="">Live Preview</a>
+            <a  class="github-link" href="">Git hub repo</a>
         </div>
         <div class="project-card" >
-            <a href=""><img src="../assests\3-column-desktop-preview.jpg" alt=""loading="lazy"></a>
-            <p></p>
+            <a href=""><img src="../assests\3-column-desktop-preview.jpg" alt="3-column-desktop-preview"loading="lazy"></a>
+            <p class="project-heading">3-COLUMN PREVIEW CARD</p>
+            <a class="live-preview-link" href="">Live Preview</a>
+            <a  class="github-link" href="">Git hub repo</a>
         </div>
     </div>
     </section>
     <section class="rounded-xl shadow-2xl mb-4 mx-6 md:mx-32">
-        <h4 id="GET INTOUCH WITH ME">GET INTOUCH WITH ME</h4>
+        <h4 id="GET INTOUCH WITH ME" class="heading"><a href="#GET INTOUCH WITH ME">GET INTOUCH WITH ME</a></h4>
             <form action="https://formspree.io/f/mzboqpkb" method="post" class="text-start mx-4 grid gap-7">
                <div>
                 <label class="field-label" for="name">NAME</label>
@@ -104,10 +117,10 @@
                 <label class="field-label" for="message">MESSAGE</label>
                 <textarea  class="input-field mt-2 pt-2 pl-2" name="message" id="message" cols="60" rows="10" placeholder="Enter Your Message " required></textarea>
                </div>
-                <input class="bg-primary-dark-green py-1 w-full text-xl uppercase rounded-md" type="submit" value="submit" id="submit-btn">
+                <input class="bg-primary-dark-green cursor-pointer hover:text-2xl py-1 w-full text-xl uppercase rounded-md hover:text-primary-dark-green hover:bg-neutral-dark-green" type="submit" value="submit" id="submit-btn">
             </form>
     </section>
-    <div class="grid gap-12 fixed bottom-1/2 right-1">
+    <div class="grid gap-12 fixed bottom-1/2 right-1 md:right-4">
         <a href="https://twitter.com/SamwelOmwenga97?s=09" target="_blank">
             <svg class="social-svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1.23em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 209"><path fill="#55acee" d="M256 25.45a105.04 105.04 0 0 1-30.166 8.27c10.845-6.5 19.172-16.793 23.093-29.057a105.183 105.183 0 0 1-33.351 12.745C205.995 7.201 192.346.822 177.239.822c-29.006 0-52.523 23.516-52.523 52.52c0 4.117.465 8.125 1.36 11.97c-43.65-2.191-82.35-23.1-108.255-54.876c-4.52 7.757-7.11 16.78-7.11 26.404c0 18.222 9.273 34.297 23.365 43.716a52.312 52.312 0 0 1-23.79-6.57c-.003.22-.003.44-.003.661c0 25.447 18.104 46.675 42.13 51.5a52.592 52.592 0 0 1-23.718.9c6.683 20.866 26.08 36.05 49.062 36.475c-17.975 14.086-40.622 22.483-65.228 22.483c-4.24 0-8.42-.249-12.529-.734c23.243 14.902 50.85 23.597 80.51 23.597c96.607 0 149.434-80.031 149.434-149.435c0-2.278-.05-4.543-.152-6.795A106.748 106.748 0 0 0 256 25.45"/></svg> 
         </a>
@@ -118,12 +131,12 @@
             <svg class="social-svg  xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 256"><path fill="#0A66C2" d="M218.123 218.127h-37.931v-59.403c0-14.165-.253-32.4-19.728-32.4c-19.756 0-22.779 15.434-22.779 31.369v60.43h-37.93V95.967h36.413v16.694h.51a39.907 39.907 0 0 1 35.928-19.733c38.445 0 45.533 25.288 45.533 58.186l-.016 67.013ZM56.955 79.27c-12.157.002-22.014-9.852-22.016-22.009c-.002-12.157 9.851-22.014 22.008-22.016c12.157-.003 22.014 9.851 22.016 22.008A22.013 22.013 0 0 1 56.955 79.27m18.966 138.858H37.95V95.967h37.97v122.16ZM237.033.018H18.89C8.58-.098.125 8.161-.001 18.471v219.053c.122 10.315 8.576 18.582 18.89 18.474h218.144c10.336.128 18.823-8.139 18.966-18.474V18.454c-.147-10.33-8.635-18.588-18.966-18.453"/></svg>
         </a>
     </div>
-    <div id="scrollToTop" class="fixed bottom-4 right-4">
+    <div id="scrollToTop" class="fixed bottom-4 right-4 animate-bounce hover:animate-none duration-300">
         <svg class=" h-12 w-12 cursor-pointer" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 64 64"><circle cx="32" cy="32" r="30" fill="#4fd1d9"/><path fill="#fff" d="M48 30.3L32 15L16 30.3h10.6V49h10.3V30.3z"/></svg>
     </div>
     <footer class="grid text-center bg-primary-dark-green py-4 md:flex md:justify-center md:align-middle gap-5">
         <p>&copy;<span class="ml-2">Copyright 2022</span></p>
-        <p>Build By <a href="https://twitter.com/SamwelOmwenga97" target="_blank">SAMWEL OMWENGA</a></p>
+        <p>Build By <a class="text-primary-light-green" href="https://twitter.com/SamwelOmwenga97" target="_blank">SAMWEL OMWENGA</a></p>
     </footer>
     <script src="app.js"></script>
 </body>
